# skynet_tools

./: .gitignore  CMakeLists.txt  README
inputs/: nuc_actual_z50_n70
src/: MultiplierReactionLibrary.hpp  PiecewiseProfile.hpp  PostProcessing.hpp  fulltraj.cpp  postprocess.cpp  reduce_reactions.cpp
traj_code/: customVariables.py  hdf5file.py  lagrangian.py  lagrangian_inner.py  lagrangian_mwarren-personal.py  lagrangian_outer.py  mathRecipes.py  python_template.py  simfiles.py  singlerun.py
variances_tot_100/: json_output0.json
